--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "arielmejiadev/larapex-charts": "^2.1",
         "barryvdh/laravel-dompdf": "^3.0",
         "laravel/framework": "^11.31",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "simplesoftwareio/simple-qrcode": "^4.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
